<resources>
    <string name="app_name">校园大数据用电安全智能检测系统</string>
    <string name="details_title">24小时用电明细</string>
    <string name="power_title">最近功率排行</string>
    <string name="level_title">最近用电排行</string>
    <string name="statistics_title">用电量分区统计</string>
    <string name="briefing_title">用电简报</string>
    <string name="current_power">当前功率</string>
    <string name="end_time">结束时间</string>
    <string name="start_time">开始时间</string>
    <string name="details">明细</string>
    <string name="power">功率</string>
    <string name="level">排行</string>
    <string name="statistics">统计</string>
    <string name="briefing">简报</string>
    <string name="avg">平均值</string>
    <string name="electricity_consumption">用电量 kwh</string>
    <string name="recent_power">最近功率 kw</string>
    <string name="settings">设置</string>
    <string name="notification">通知</string>
    <string name="notification_enable">开启</string>
    <string name="notification_enable_summary_on">已开启通知</string>
    <string name="notification_enable_summary_off">已关闭通知</string>
    <string name="notification_enable_key">notification_enable</string>
    <string name="notification_threshold">阈值(kwh)</string>
    <string name="notification_threshold_key">notification_threshold</string>
    <string name="notification_threshold_summary">当存在用电功率超过该阈值时将会发送通知消息。</string>
    <string name="notification_threshold_title_format">%s超过警报阈值！！！</string>
    <string name="notification_threshold_context_format">当前功率：%.2f kwh</string>
    <string name="notification_threshold_intent_action">Alarm</string>
    <string name="notification_threshold_intent_param_dormitory_no">dormitoryNo</string>
</resources>