<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/round_analytics_24"
        android:title="@string/details" />
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/round_settings_input_composite_24"
        android:title="@string/power" />
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/round_leaderboard_24"
        android:title="@string/level" />
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/round_pie_chart_24"
        android:title="@string/statistics" />
    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@drawable/round_receipt_24"
        android:title="@string/briefing" />
</menu>